[tool.poetry]
name = "pathway"
version = "0.1.0"
description = "A token analytics tool"
authors = ["Rohan Tangri <rohan.tangri@trili.tech>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
isort = "^5.13.2"
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
